--- a/index.html
+++ b/index.html
@@ -1,100 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Coldwater Rocket Football & Cheerleading</title>
-  <style>
-    body {
-      margin: 0;
-      font-family: 'Arial', sans-serif;
-      background-color: #fff;
-      color: #333;
-    }
-    header {
-      background-color: #c00;
-      color: white;
-      padding: 1rem;
-      text-align: center;
-    }
-    nav {
-      background: #900;
-      display: flex;
-      justify-content: center;
-      gap: 2rem;
-      padding: 0.5rem;
-    }
-    nav a {
-      color: white;
-      text-decoration: none;
-      font-weight: bold;
-    }
-    section {
-      padding: 2rem;
-    }
-    footer {
-      background: #eee;
-      text-align: center;
-      padding: 1rem;
-      font-size: 0.9rem;
-      color: #666;
-    }
-    .social-icons a {
-      margin-right: 10px;
-      text-decoration: none;
-      font-weight: bold;
-      color: #c00;
-    }
-  </style>
-</head>
-<body>
-  <header>
-    <h1>Coldwater Rocket Football & Cheerleading</h1>
-    <p>Building Character. Encouraging Teamwork. Inspiring Excellence.</p>
-  </header>
-
-  <nav>
-    <a href="#about">About</a>
-    <a href="#programs">Programs</a>
-    <a href="#registration">Registration</a>
-    <a href="#schedule">Schedule</a>
-    <a href="#contact">Contact</a>
-  </nav>
-
-  <section id="about">
-    <h2>About Us</h2>
-    <p>Welcome to Coldwater Rocket Football and Cheerleading! We are dedicated to providing a safe and fun environment for youth athletes to learn, grow, and compete in football and cheerleading. Our coaches are passionate about teaching skills, teamwork, and sportsmanship.</p>
-  </section>
-
-  <section id="programs">
-    <h2>Our Programs</h2>
-    <h3>Football</h3>
-    <p>We offer competitive football teams for students in grades 3 through 6. Practices are held during the week with games on Saturdays.</p>
-    <h3>Cheerleading</h3>
-    <p>Our cheerleading program supports our football teams and builds confidence, coordination, and spirit in all our athletes.</p>
-  </section>
-
-  <section id="registration">
-    <h2>Registration</h2>
-    <p>Sign up for the upcoming season!</p>
-  </section>
-
-  <section id="schedule">
-    <h2>Schedule</h2>
-    <p>Stay tuned for the full season calendar including practices, games, and events.</p>
-  </section>
-
-  <section id="contact">
-    <h2>Contact Us</h2>
-    <p>Email: <a href="mailto:Coldwateryouthfootball@gmail.com">Coldwateryouthfootball@gmail.com</a></p>
-    <p>Follow us on social media for the latest updates!</p>
-    <div class="social-icons">
-      <a href="https://www.facebook.com/ColdwaterRocketFootball" target="_blank">Facebook</a>
-    </div>
-  </section>
-
-  <footer>
-    <p>&copy; 2025 Coldwater Rocket Football & Cheerleading. All rights reserved.</p>
-  </footer>
-</body>
-</html>
+<!-- Homepage content goes here -->
