--- a/index.html
+++ b/index.html
@@ -1,1 +1,61 @@
-<!-- Homepage content goes here -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Coldwater Rocket Football & Cheerleading</title>
+  <style>
+    body {
+      margin: 0;
+      font-family: Arial, sans-serif;
+      background-color: white;
+      color: #333;
+    }
+    header {
+      background-color: #c00;
+      color: white;
+      text-align: center;
+      padding: 1rem;
+    }
+    nav {
+      background-color: #900;
+      display: flex;
+      justify-content: center;
+      gap: 1.5rem;
+      padding: 0.75rem;
+    }
+    nav a {
+      color: white;
+      text-decoration: none;
+      font-weight: bold;
+    }
+    main {
+      padding: 2rem;
+      text-align: center;
+    }
+    footer {
+      background-color: #eee;
+      text-align: center;
+      padding: 1rem;
+      color: #666;
+    }
+  </style>
+</head>
+<body>
+  <header>
+    <h1>Coldwater Rocket Football & Cheerleading</h1>
+  </header>
+  <nav>
+    <a href="index.html">Home</a>
+    <a href="programs.html">Programs</a>
+    <a href="meet-the-board.html">Meet the Board</a>
+    <a href="contact.html">Contact</a>
+  </nav>
+  <main>
+    <p>Welcome to the official site for Coldwater Rocket Football & Cheerleading!</p>
+  </main>
+  <footer>
+    <p>&copy; 2025 Coldwater Rocket Football & Cheerleading</p>
+  </footer>
+</body>
+</html>
