--- a/meet-the-board.html
+++ b/meet-the-board.html
@@ -1,1 +1,21 @@
-<!-- Meet the Board content goes here -->
+<!DOCTYPE html>
+<html lang="en">
+<head><meta charset="UTF-8"><title>Meet the Board</title></head>
+<body>
+  <h1>Meet the Board</h1>
+  <ul>
+    <li>President: Rocky Stepp</li>
+    <li>Vice-President: Brittany Roddy</li>
+    <li>Treasurer: Erin Somerlott</li>
+    <li>Treasurer's Secretary: Brent Somerlott</li>
+    <li>Secretary: Jami Stepp</li>
+    <li>Sargent of Arms: Ryan Kuster</li>
+    <li>Board Member: Will Knowlan</li>
+    <li>Board Member: Angelique Midkiff</li>
+    <li>Board Member: Suzi Walters</li>
+    <li>Board Member: Andy McRae</li>
+    <li>Board Member: Christina Cameron-Erath</li>
+    <li>Board Member: Josh Roddy</li>
+  </ul>
+</body>
+</html>
