--- a/contact.html
+++ b/contact.html
@@ -1,10 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-<head><meta charset="UTF-8"><title>Contact Us</title></head>
-<body>
-  <h1>Contact Us</h1>
-  <p>Email: <a href="mailto:Coldwateryouthfootball@gmail.com">Coldwateryouthfootball@gmail.com</a></p>
-  <p>President: Rocky Stepp - 517-617-3729</p>
-  <p>Vice-President: Brittany Roddy - 517-617-6827</p>
-</body>
-</html>
+<!-- Simulated content for contact.html -->
