--- a/programs.html
+++ b/programs.html
@@ -1,1 +1,69 @@
-<!-- Simulated content for programs.html -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Programs - Coldwater Rocket Football</title>
+  <style>
+    body {
+      margin: 0;
+      font-family: Arial, sans-serif;
+      background-color: #fff;
+      color: #333;
+    }
+    header {
+      background-color: #c00;
+      color: white;
+      padding: 1rem;
+      text-align: center;
+    }
+    nav {
+      background: #900;
+      display: flex;
+      justify-content: center;
+      gap: 2rem;
+      padding: 0.5rem;
+    }
+    nav a {
+      color: white;
+      text-decoration: none;
+      font-weight: bold;
+    }
+    section {
+      padding: 2rem;
+    }
+    footer {
+      background: #eee;
+      text-align: center;
+      padding: 1rem;
+      font-size: 0.9rem;
+      color: #666;
+    }
+  </style>
+</head>
+<body>
+  <header>
+    <h1>Our Programs</h1>
+  </header>
+
+  <nav>
+    <a href="index.html">Home</a>
+  </nav>
+
+  <section>
+    <h2>Football</h2>
+    <p>Our football program is open to students in 3rd through 6th grade. We focus on fundamentals, safety, and sportsmanship while fostering a team-first attitude.</p>
+
+    <h2>Cheerleading</h2>
+    <p>Cheerleading is available for grades 3 through 6. Our program builds school spirit, coordination, and confidence through cheers, chants, and performance.</p>
+
+    <h2>Middle School Cheerleading</h2>
+    <p>We also offer a cheerleading program for students in 7th and 8th grade to help bridge the transition to high school-level cheering.</p>
+    <p><a href="cheer flyer.pdf" target="_blank">Click here to view the Middle School Cheerleading Flyer</a></p>
+  </section>
+
+  <footer>
+    <p>&copy; 2025 Coldwater Rocket Football & Cheerleading. All rights reserved.</p>
+  </footer>
+</body>
+</html>
